feat: complete login form and implementation

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,9 @@
-@import './base.css';
+/* GLOBAL VARIABLES */
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+:root {
+  --main-primary-color: #00b3b3;
+  --main-success-color: #00cc66;
+  --main-warning-color: #ff9900;
+  --main-error-color: #990000;
+  --main-secondary-color: #03dac6;
 }
